# charm-lxd

./: .gitignore  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  run_tests  tox.ini
.github/: dependabot.yml
.github/preseed/: lxd-preseed.yaml
.github/scripts/: charmcraft-tweak.py  ci-helpers.sh  test-readme-adoption-examples.sh
.github/workflows/: builds.yml  charmcraft.yml  cla-check.yml  commits.yml  static-analysis.yml  test.yml  tests.yml  update-libs.yml
bundles/: README.md  all-in-one.yaml  lxd-and-ceph.yaml  lxd-and-ovn.yaml  lxd-and-prometheus2+grafana.yaml  lxd-and-prometheus2.yaml
bundles/cmrs/: README.md
bundles/cmrs/ceph/: ceph-mon.yaml  ceph-osd-and-lxd.yaml
bundles/cmrs/ovn/: ovn-central-and-vault.yaml  ovn-chassis-and-lxd.yaml
examples/: cluster-preseed.yaml  test-adopt-existing-standalone.sh
examples/https-client/: README.md  charmcraft.yaml  config.yaml  metadata.yaml  requirements.txt
examples/https-client/src/: https-client.py
scripts/: fetch-libs.sh
src/: adoption.py  charm.py
tests/unit/: test_adoption_management.py  test_install_adoption.py
