[project]
name = "charm-lxd"
description = "Charm for LXD"
license = "Apache 2.0"
python = "^3.8"
readme = "README.md"
homepage = "https://charmhub.io/lxd"
repository = "https://github.com/canonical/charm-lxd"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Formatting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["lib/charms/"]

[tool.ruff.lint]
select = ["D", "E", "F", "N", "W"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 99

[tool.ruff.lint.pydocstyle]
convention = "google"

# Static analysis tools configuration
[tool.mypy]
exclude = "build"
pretty = true
python_version = 3.8
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true

# Ignore libraries that do not have type hint nor stubs
[[tool.mypy.overrides]]
module = [
  "charms.grafana_k8s.v0.grafana_dashboard",
  "charms.loki_k8s.v0.loki_push_api",
  "cosl.*",
  "ops.*",
  "pylxd.*",
]
ignore_missing_imports = true
